<resources>
    <string name="app_name">Intermediate Submission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cta_register1">Not registered yet?</string>
    <string name="cta_register2">Create an account</string>
    <string name="login">Login</string>
    <string name="input_email">Email</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="register_success">You\'re successfully registered</string>
    <string name="email_error">Invalid email address</string>
    <string name="username_error">Invalid username</string>
    <string name="password_error">password length must be at least 6 characters</string>
    <string name="empty_field_error">"this field can't be empty"</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus lorem diam. Vestibulum sed dolor vel libero commodo luctus vel eget lacus. Phasellus tempus felis tortor, sit amet ultrices tortor vulputate vitae. Integer molestie velit vehicula maximus mattis. Quisque eu erat nisi. Phasellus et dui non arcu ornare congue sed nec eros. Nam egestas risus vel diam venenatis, nec gravida odio ultrices. Proin enim elit, fringilla sed purus sed, aliquet accumsan nisl. Proin suscipit condimentum justo, ut interdum elit pharetra ac. Proin bibendum eros vel mauris facilisis accumsan in in ligula. Integer nec rhoncus odio, ac vulputate odio. Aenean erat massa, eleifend at dictum sit amet, tincidunt vitae lacus.</string>
    <string name="retry">Retry</string>
    <string name="no_result">"No results 😓</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="empty_text">NO DATA</string>
    <string name="permission_camera">Camera permission is required to take photo</string>
    <string name="close">Close</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="empty_picture">Please insert picture</string>
    <string name="empty_description">There is no description</string>
    <string name="no_internet">No internet connection</string>
    <string name="check_email">Please check your email field</string>
    <string name="check_password">Please check your password field</string>
    <string name="check_username">Please check your username field</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="fail_picture">Fail to take picture</string>
    <string name="fail_camera">Fail to launch camera</string>
    <string name="fail_refresh">Unable to refresh, please make sure connection is available</string>
    <string name="gallery">Gallery</string>
    <string name="story_list">Story List</string>
    <string name="story">Story</string>
    <string name="add_story">Add Story</string>
    <string name="authentication">Authentication</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Story List</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_upload">UploadActivity</string>
    <!-- Strings used for fragments for navigation -->
</resources>