<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_nav_graph"
    app:startDestination="@id/storyListFragment">

    <fragment
        android:id="@+id/storyListFragment"
        android:name="com.example.intermediatesubmission.presentation.ui.fragment.story.StoryListFragment"
        android:label="@string/story_list"
        tools:layout="@layout/fragment_story_list" >
        <action
            android:id="@+id/action_storyListFragment_to_storyViewPagerFragment"
            app:destination="@id/storyViewPagerFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_storyListFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_storyListFragment_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>
    <fragment
        android:id="@+id/storyViewPagerFragment"
        android:name="com.example.intermediatesubmission.presentation.ui.fragment.story.StoryViewPagerFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_story_view_pager" >
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/addStoryFragment"
        android:name="com.example.intermediatesubmission.presentation.ui.fragment.story.AddStoryFragment"
        android:label="@string/add_story"
        tools:layout="@layout/fragment_add_story" >
        <action
            android:id="@+id/action_addStoryFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_addStoryFragment_to_storyListFragment"
            app:destination="@id/storyListFragment"
            app:popUpTo="@id/storyListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.intermediatesubmission.presentation.ui.fragment.story.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_cameraFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment"
            app:popUpTo="@id/addStoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/authActivity"
        android:name="com.example.intermediatesubmission.presentation.ui.activity.AuthActivity"
        android:label="@string/authentication"
        tools:layout="@layout/activity_auth" />
</navigation>