<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.story.AddStoryFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/preview_image_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:maxWidth="350dp"
            android:maxHeight="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_error_placeholder" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/gallery_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/ed_add_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/camera_btn"
        app:layout_constraintTop_toTopOf="@id/camera_btn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/edit_text_view_border_bg"
        android:gravity="top"
        android:hint="@string/description"
        android:padding="8dp"
        app:boxBackgroundMode="none"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="@id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

    <ProgressBar
        android:id="@+id/progress_ind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>